@@ -655,7 +655,10 @@ class JCache
 		$app = JFactory::getApplication();
 
 		// Get url parameters set by plugins
-		$registeredurlparams = $app->registeredurlparams;
+		if (!empty($app->registeredurlparams))
+		{
+			$registeredurlparams = $app->registeredurlparams;
+		}
 
 		// Platform defaults
 		$registeredurlparams->format = 'WORD';
